ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baobao-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app1-zookeeper.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zookeeper-service
                port:
                  number: 2181

    - host: app2-kafka.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-service
                port:
                  number: 9092

    - host: app3-airflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-service
                port:
                  number: 80
